--- a/ProjectOne/Pages/Product/Create.cshtml
+++ b/ProjectOne/Pages/Product/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ProjectStore.Pages.CreateModel
+@model ProjectStore.Pages.Product.CreateModel
 
 @{
     ViewData["Title"] = "Создание";
