--- a/ProjectOne/Pages/Product/Delete.cshtml
+++ b/ProjectOne/Pages/Product/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ProjectStore.Pages.DeleteModel
+@model ProjectStore.Pages.Product.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
