--- a/ProjectOne/Views/UserProduct/Index.cshtml
+++ b/ProjectOne/Views/UserProduct/Index.cshtml
@@ -13,7 +13,6 @@
 
     @foreach (var item in Model)
     {
-
         <div class="col">
             <div class="card mb-lg-3 rounded-4 mb-4 shadow-sm bg-white" style="max-width: 100%; padding: 15px">
                 <div class="row">
@@ -24,17 +23,25 @@
                     <div class="col-md-6">
                         <div class="card-body">
                             <h5 class="card-title">@item.Name</h5>
-                            <p><small class="text-muted"> <mark class="mark text-light bg-dark rounded-3 p-1 ">@item.Category</mark></small> </p>
+                            <p>
+                                <small class="text-muted">
+                                    <mark class="mark text-light bg-dark rounded-3 p-1 ">@item.Category</mark>
+                                </small>
+                            </p>
                             <p class="card-text">От @Math.Round((decimal)item.Price!, 0) $ </p>
-                            <form method="post" asp-controller="UserProduct" asp-action="UserDetails">
-                                <input type="hidden" name="id" value="@item.Id">
-                                <button type="submit" class="btn btn-primary">Детали</button>
-                            </form>
+                            <div class="d-flex">
 
-                            <form method="post" asp-controller="UserProduct" asp-action="AddToCart">
-                                <input type="hidden" name="id" value="@item.Id">
-                                <button type="submit" class="btn btn-primary">В корзину</button>
-                            </form>
+                                <form method="post" class="me-2" asp-controller="UserProduct" asp-action="UserDetails">
+                                    <input type="hidden" name="id" value="@item.Id">
+                                    <button type="submit" class="btn btn-primary">Детали</button>
+                                </form>
+
+                                <form method="post" asp-controller="UserProduct" asp-action="AddToCart">
+                                    <input type="hidden" name="id" value="@item.Id">
+                                    <button type="submit" class="btn btn-secondary">В корзину</button>
+                                </form>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -42,4 +49,3 @@
         </div>
     }
 </div>
-
