--- a/ProjectOne/Views/Role/Edit.cshtml
+++ b/ProjectOne/Views/Role/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 
 @using Microsoft.AspNetCore.Identity
-@model MyPet.ViewModels.ChangeRoleViewModel
+@model ProjectStore.ViewModels.ChangeRoleViewModel
 @{
     ViewBag.Title = "Изменение ролей";
     ViewBag.Secondary = "Для пользователя: " + Model.UserEmail;
