--- a/ProjectOne/Pages/Product/Details.cshtml
+++ b/ProjectOne/Pages/Product/Details.cshtml
@@ -36,13 +36,13 @@
             @Html.DisplayFor(model => model.Product.Category)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Product.Imagepath)
+            @Html.DisplayNameFor(model => model.Product.ImagePath)
         </dt>
         <dd class="col-sm-10">
            
-            @Html.DisplayFor(model => model.Product.Imagepath)
+            @Html.DisplayFor(model => model.Product.ImagePath)
         </dd>
-         <img src="@Model.Product.Imagepath" class="card-img shadow-lg rounded-3" style="height: 400px; width: 400px; object-fit: cover"/>
+         <img src="@Model.Product.ImagePath" class="card-img shadow-lg rounded-3" style="height: 400px; width: 400px; object-fit: cover"/>
     </dl>
 </div>
 <div class="mt-3">
