--- a/ProjectOne/Views/Role/Index.cshtml
+++ b/ProjectOne/Views/Role/Index.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "Список ролей";
     ViewBag.Secondary = "Для администратора";
 }
+ <h1 class="mb-5">@ViewBag.Title 👮</h1>
 <table class="table">
+   
     @foreach (var role in Model)
     {
         <tr>
