--- a/ProjectOne/Pages/Product/Delete.cshtml
+++ b/ProjectOne/Pages/Product/Delete.cshtml
@@ -5,12 +5,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Удаление💀</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Уверены что хотите удалить это?</h3>
 <div>
     <h4>Product</h4>
-    <hr />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Product.Name)
@@ -37,16 +36,21 @@
             @Html.DisplayFor(model => model.Product.Category)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Product.Imagepath)
+            @Html.DisplayNameFor(model => model.Product.ImagePath)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Product.Imagepath)
+            @Html.DisplayFor(model => model.Product.ImagePath)
         </dd>
+        <dd>
+               <img class="rounded-3" style="object-fit: cover" src="@Model.Product.ImagePath" alt="Фото товара"/>
+        </dd>
+
+     
     </dl>
-    
+
     <form method="post">
-        <input type="hidden" asp-for="Product.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="hidden" asp-for="Product.Id"/>
+        <input type="submit" value="Удалить" class="btn btn-primary"/> |
+        <a asp-page="./Index">Список товаров</a>
     </form>
 </div>
