--- a/ProjectOne/Pages/Product/Index.cshtml
+++ b/ProjectOne/Pages/Product/Index.cshtml
@@ -48,7 +48,7 @@
                     @Html.DisplayFor(modelItem => item.Category)
                 </td>
                 <td>
-                    <img src="@item.Imagepath" style="height: 100px; width: 100px; object-fit: cover;">
+                    <img src="@item.ImagePath" style="height: 100px; width: 100px; object-fit: cover;">
                 </td>
                 <td>
                     <a asp-page="./Edit" class="btn btn-info" asp-route-id="@item.Id.ToString()">Изменить</a>
