--- a/ProjectOne/Views/UserProduct/Cart.cshtml
+++ b/ProjectOne/Views/UserProduct/Cart.cshtml
@@ -14,7 +14,7 @@
         <div class="card mb-lg-3 rounded-4 mb-4 shadow-sm bg-white" style="max-width: 100%; padding: 15px">
             <div class="row">
                 <div class="col-md-6 mycenter">
-                    <img src="@item.Imagepath" style="padding: 20px;" class="img-fluid rounded-start rounded-3" alt="Image">
+                    <img src="@item.ImagePath" style="padding: 20px;" class="img-fluid rounded-start rounded-3" alt="Image">
                 </div>
 
                 <div class="col-md-6">
