--- a/ProjectOne/Views/UserProduct/Cart.cshtml
+++ b/ProjectOne/Views/UserProduct/Cart.cshtml
@@ -1,8 +1,27 @@
 ﻿@model IEnumerable<Product>
 
-
-<img src="https://www.build-review.com/wp-content/uploads/2022/06/Warehouse.jpg" style="width: 100%; height: 600px; object-fit:cover" />
-<div class="pb-5">
+<style>
+    .back{
+    object-fit:cover;
+    border-radius: 20px;
+    max-height: 30dvh; 
+    }
+    
+</style>
+<div class="row text-center">
+    <div class="col-4">
+        <img src="/img/images/cart1.jpg" class="back img-fluid shadow-sm" alt="abstract1"/>
+    </div>
+    
+    <div class="col-4">
+        <img src="/img/images/cart2.jpg" class="back img-fluid shadow-sm" alt="abstract1"/>
+    </div>
+    
+        <div class="col-4">
+            <img src="/img/images/cart3.jpg" class="back img-fluid shadow-sm" alt="abstract1"/>
+        </div>
+</div>
+<div class="pb-5 mt-5 text-center">
     <h1>Ваша корзина</h1>
     <span class="lead">Количество: @Model.Count()</span>
 </div>
@@ -14,14 +33,18 @@
         <div class="card mb-lg-3 rounded-4 mb-4 shadow-sm bg-white" style="max-width: 100%; padding: 15px">
             <div class="row">
                 <div class="col-md-6 mycenter">
-                    <img src="@item.ImagePath" style="padding: 20px;" class="img-fluid rounded-start rounded-3" alt="Image">
+                    <img src="@item.ImagePath" class="img-fluid rounded-3 shadow-sm" alt="Image">
                 </div>
 
                 <div class="col-md-6">
                     <div class="card-body">
                         <h5 class="card-title">@item.Name</h5>
                         <span class="lead">@item.Description</span>
-                        <p><small class="text-muted"> <mark class="mark text-light bg-dark rounded-3 p-1 ">@item.Category</mark></small> </p>
+                        <p>
+                            <small class="text-muted">
+                                <mark class="mark text-light bg-dark rounded-3 p-1 ">@item.Category</mark>
+                            </small>
+                        </p>
                         <p class="card-text">От @Math.Round((decimal)item.Price!, 0) $ </p>
                         <div class="d-flex">
                             <form id="@item.Id" method="post" asp-controller="UserProduct" asp-action="UserDetails">
